[package]
name = "gameshopui"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
take_mut = "0.2.2"
thiserror = "2"
itertools =  "0.13.0"
serde = { version = "1.0.215", features = ["serde_derive"] }
serde_json = "1.0.133"
reqwest = "0.12.9"
iced = { version = "0.13.1", features = ["tokio"]}
